# artefact

./: .gitattributes  .gitignore  Cargo.toml  Main.tscn  Test.gd  Test.tscn  artefact.gdnlib  build.sh  build_debug.sh  build_release.sh  design.txt  export_presets.cfg  project.godot  push.sh  report_data.json
artefact/: Artefact.gdns  Artefact.tscn  ArtefactGui.gd  ArtefactGui.tscn  CodeLine.gd  CodeLine.tscn  CodeViewer.gd  CodeViewer.tscn  ExecutionController.gd  ExecutionController.tscn  MemoryLine.tscn  MemoryViewer.gd  MemoryViewer.tscn  RegisterViewer.gd  RegisterViewer.tscn  Tooltips.gd  Tooltips.tscn  WriterIndicator.gd  WriterIndicator.tscn  plugin.cfg
assembler/: asm.py
calculator/: Calculator.gdns  Calculator.tscn  CalculatorButton.gd  CalculatorButton.tscn  CalculatorGui.gd  CalculatorGui.tscn
cutscenes/: IntroCutscene.gd  IntroCutscene.tscn
dialog/: DialogScene.gd  DialogScene.tscn  story.tres  story_baked.tres  template_nid.res
doc/: design.txt  levels.txt  playtest.txt  progress.txt  script.txt
gui/: ConfirmButton.gd  Indicator.gd  Indicator.tscn  Options.gd  Options.tscn  PauseScreen.gd  PauseScreen.tscn  StartScreen.gd  StartScreen.tscn
levels/: ArithmeticArtefact.gd  ArithmeticArtefact.tscn  ArithmeticCalculator.gd  ArithmeticCalculator.tscn
report/: Answer.gd  Answer.tscn  AnswerBox.gd  AnswerBox.tscn  AnswerPrompt.gd  AnswerPrompt.tscn  ArtefactReport.tscn  CalculatorReport.tscn  Question.gd  Question.tscn  ReportGui.gd  ReportGui.tscn  ReportLoader.gd
scripts/: AudioStreamManager.gd  Config.gd  Helper.gd  Save.gd  TooltipManager.gd
(+129 files in other folders)
