[package]
name = "artefact_vm"
version = "0.1.0"
authors = ["Azertinv <azertinv@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.1"
json = "*"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
